# Classification-ML-Deployment

./: README.md  app-prod.py  config.py  pyproject.toml
models/: dec_tree.joblib  lgbm_model.joblib
notebooks/: EDA.ipynb  ML.ipynb  app-prod.ipynb  preprocessing.ipynb
