[tool.poetry]
name = "classification-ml-deployment"
version = "0.1.0"
description = ""
authors = ["jaylesmajor <143688733+jaylesmajor@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.2.3"
matplotlib = "^3.9.3"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"
imblearn = "^0.0"
lightgbm = "^4.5.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
